--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: rgb(228, 197, 168);
 }
 img {
     width: 100%;
@@ -18,16 +19,18 @@ header {
     padding: 20px 10%;
     box-shadow: 0px 5px 4px 3px rgba(0, 0, 0, 0.3);
     margin-bottom: 20px;
+    background-color: white;
 }
+
 h1 {
-    color: royalblue;
+    color: rgb(102, 38, 19);
     text-transform: uppercase;
     font-weight: 700;
     font-size: 50px;
 }
 #boton-carrito {
     border: none;
-    color: royalblue;
+    color: rgb(102, 38, 19);
     font-size: 40px;
     background-color: white;
     border-radius: 50%;
@@ -37,7 +40,7 @@ h1 {
 #boton-carrito:hover {
     cursor: pointer;
     color: white;
-    background-color: royalblue;
+    background-color: rgb(228, 197, 168);
 }
 #boton-carrito:focus {
     outline: none;
@@ -60,6 +63,7 @@ p {
     margin: 10px;
     margin-bottom: 20px;
     box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3);
+    background-color: white;
 }
 .precioProducto {
     font-weight: 700;
